[metadata]
name = pi_vex_393
version = 0.0.1alpha
author = Ben Petterborg
author_email = ben.petterborg@gmail.com
description = "Control Vex 393 motors with a Pi"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bpetterborg/pi_vex_393
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: Linux

[options]
packages = find:
python_requires = >=3.8